<resources>
    <string name="app_name">TP4</string>

    <string name="tab_text_add">Alta</string>
    <string name="tab_text_update">Modificación</string>
    <string name="tab_text_list">Listado</string>

    <string name="text_id">ID</string>
    <string name="text_product_name">Nombre de producto</string>
    <string name="text_stock">Stock</string>
    <string name="text_category">Categoría</string>
    <string name="text_empty_category">Seleccione una categoría</string>
    <string name="text_add">Agregar</string>
    <string name="text_saving">Guardando</string>
    <string name="text_update">Modificar</string>
    <string name="text_search">Buscar</string>
    <string name="text_searching">Buscando</string>
    <string name="text_remove">Eliminar</string>
    <string name="text_see_more">Ver más</string>
    <string name="text_accept">Aceptar</string>
    <string name="text_cancel">Cancelar</string>
</resources>